Correct UI on small screens

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -42,7 +42,7 @@ header {
   max-height: 20%;
   padding-top: 24px;
   & .button-collapse {
-    width: 4%;
+    width: 1em !important;
     position: absolute;
     z-index: 1000;
   }
