--- a/src/less/imports/small-screen.less
+++ b/src/less/imports/small-screen.less
@@ -19,7 +19,9 @@
   }
 
   ul.collection.messages {
-    width: 94%;
+    width: calc(99% - 1em - 1.5rem);
+    right: 0;
+    margin-right: 1%;
   }
 
   #sidemenu {
